Add working consul checksum verification on app status

--- a/configuration/di.kraken.yml
+++ b/configuration/di.kraken.yml
@@ -78,6 +78,7 @@ services:
         arguments:
             - @kraken.status.twig
             - @kraken.application
+            - @kraken.consul
             - @doctrine.em
     kraken.status.twig:
         parent: 'kraken.template'
