--- a/configuration/kraken/Configuration.orm.yml
+++ b/configuration/kraken/Configuration.orm.yml
@@ -19,6 +19,11 @@ QL\Kraken\Entity\Configuration:
             type: string
             length: 500
 
+        created:
+            column: created_time
+            type: timepoint
+            nullable: true
+
     manyToOne:
 
         environment:
