--- a/configuration/routes.yml
+++ b/configuration/routes.yml
@@ -555,6 +555,13 @@ parameters:
                 application: %routes.regex.hex%
                 configuration: %routes.regex.hex%
 
+        kraken.configuration.compare:
+            route: '/kraken/applications/:application/configurations/:configuration/compare'
+            stack: ['kraken.middleware.require.entity', 'kraken.application.configuration.page']
+            conditions:
+                application: %routes.regex.hex%
+                configuration: %routes.regex.hex%
+
         # add application
         kraken.add_application:
             route: '/kraken/applications/add'
