--- a/configuration/kraken/ConfigurationProperty.orm.yml
+++ b/configuration/kraken/ConfigurationProperty.orm.yml
@@ -24,6 +24,10 @@ QL\Kraken\Entity\ConfigurationProperty:
             column: value
             type: string
             length: 4000
+        created:
+            column: created_time
+            type: timepoint
+            nullable: true
 
     manyToOne:
 
