--- a/configuration/kraken/Configuration.orm.yml
+++ b/configuration/kraken/Configuration.orm.yml
@@ -35,3 +35,10 @@ QL\Kraken\Entity\Configuration:
             joinColumn:
                 name: application_id
                 referencedColumnName: id
+
+        user:
+            cache: {usage : READ_ONLY}
+            targetEntity: QL\Hal\Core\Entity\User
+            joinColumn:
+                name: user_id
+                referencedColumnName: UserId
