--- a/configuration/kraken/ConfigurationProperty.orm.yml
+++ b/configuration/kraken/ConfigurationProperty.orm.yml
@@ -46,3 +46,9 @@ QL\Kraken\Entity\ConfigurationProperty:
             joinColumn:
                 name: schema_id
                 referencedColumnName: id
+        user:
+            cache: {usage : READ_ONLY}
+            targetEntity: QL\Hal\Core\Entity\User
+            joinColumn:
+                name: user_id
+                referencedColumnName: UserId
