Correctly set kraken times in CODE not in DB

--- a/configuration/di.kraken.yml
+++ b/configuration/di.kraken.yml
@@ -38,6 +38,10 @@ services:
     doctrine.em.configurator:
         class: 'QL\Kraken\Doctrine\DoctrineConfigurator'
 
+    doctrine.listener.kraken.persist:
+        class: 'QL\Kraken\Doctrine\DoctrinePersistListener'
+        arguments: [@clock]
+
     ####################################################################################################################
     # CONTROLLERS
     ####################################################################################################################
